# discreate-optimization-assignment

./: pyproject.toml
coloring/: solver.py
knapsack/: solver.py
