[tool.poetry]
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
# Lecture requirements
pytest = "^8.3.1"
pytest-cov = "^5.0.0"
codecov = "^2.1.13"
# Self usage
pulp = "^2.9.0"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
